refactor pom